--- a/base-only-odoo.cfg
+++ b/base-only-odoo.cfg
@@ -25,7 +25,9 @@ command     = ${buildout:bin-directory}/supervisord
 [openerp]
 recipe = anybox.recipe.openerp[bzr]:server
 version = ${settings:openerp_version}
-addons = git https://github.com/OCA/l10n-spain.git odoo-repos/spain 6.1
+addons = git https://github.com/OCA/l10n-spain.git openerp-repos/spain 6.1
+	bzr lp:ocb-addons/6.1 openerp-repos/ocb-addons last:1
+	bzr lp:ocb-web/6.1 openerp-repos/ocb-web last:1 subdir=addons
 
 eggs = unidecode
 	pyPdf
