--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,8 +21,8 @@ find-links = http://download.gna.org/pychart/
 eggs +=
 
 [settings]
-folder = odoo
-openerp_version = git http://github.com/odoo/odoo.git odoo 6.1
+folder = openerp
+openerp_version = bzr lp:ocb-server/6.1 ${settings:folder} last:1
 
 openerp_xmlrpc_port = 8069
 openerp_xmlrpcs_port = 8071
