--- a/versions.cfg
+++ b/versions.cfg
@@ -58,7 +58,7 @@ feedparser = 5.1.3
 gdata = 2.0.18
 hexagonit.recipe.cmmi = 2.0
 hexagonit.recipe.download = 1.7
-ipython = 1.1.0
+ipython = 1.1.0fpy
 iw.recipe.cmd = 0.3
 lxml = 3.2.3
 meld3 = 0.6.10
@@ -90,7 +90,6 @@ zc.recipe.eggs = 2.0.0
 babel = 0.9.6
 Pillow = 1.7.1
 pywebdav = 0.9.4.1
-PyXML = 0.8.4
 pyyaml = 3.10
 werkzeug = 0.9.4
 zsi = 2.0-rc3
