--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,9 +12,7 @@ parts +=
     py
     initdb
     openerp
-    supervisor
     scripts
-    supervisor-cron
 
 
 find-links = http://download.gna.org/pychart/
@@ -22,7 +20,7 @@ eggs +=
 
 [settings]
 folder = openerp
-openerp_version = bzr lp:ocb-server/6.1 ${settings:folder} last:1
+openerp_version = bzr lp:~pexego/ocb-server/ocb-server-va-ca ${settings:folder} last:1
 
 openerp_xmlrpc_port = 8069
 openerp_xmlrpcs_port = 8071
@@ -34,5 +32,3 @@ postgres_password = openerp
 postgres_port = 5432
 postgres_maxconn = 100
 
-supervisor_port = 9001
-supervisor_url = http://127.0.0.1
