--- a/base-only-odoo.cfg
+++ b/base-only-odoo.cfg
@@ -13,21 +13,20 @@ recipe = iw.recipe.cmd
 on_install = true
 on_update = true
 cmds =
-    echo "creando base de datos " + ${openerp:options.db_name}
-    psql -d postgres -U ${settings:postgres_user} -c 'CREATE DATABASE ${openerp:options.db_name}'
     ${buildout:bin-directory}/upgrade_openerp
-
-[supervisor-cron]
-recipe      = z3c.recipe.usercrontab
-times       = @reboot
-command     = ${buildout:bin-directory}/supervisord 
 
 [openerp]
 recipe = anybox.recipe.openerp[bzr]:server
 version = ${settings:openerp_version}
-addons = git https://github.com/OCA/l10n-spain.git openerp-repos/spain 6.1
-	bzr lp:ocb-addons/6.1 openerp-repos/ocb-addons last:1
-	bzr lp:ocb-web/6.1 openerp-repos/ocb-web last:1 subdir=addons
+addons = git https://github.com/Pexego/addons-va-ca-px.git openerp-repos/cantabriasil_PX master
+	git https://github.com/Pexego/addons-va-ca-ti.git openerp-repos/cantabriasil_TING master
+	git https://github.com/Pexego/l10n-spain-VA-CA.git openerp-repos/spain 6.1
+	git https://github.com/OCA/account-payment.git openerp-repos/payment-extension 6.1
+	bzr lp:~pexego/ocb-addons/ocb-addons-va-ca openerp-repos/ocb-addons last:1
+	bzr lp:~pexego/ocb-web/ocb-web-va-ca openerp-repos/ocb-web last:1 subdir=addons
+	bzr lp:sepa-tools/6.1 openerp-repos/sepa-tools last:1
+	bzr lp:aeroo/openerp6.1.x  openerp-repos/aeroo last:1
+	bzr lp:acysos/openerp-addons-6.1 openerp-repos/acysos last:1
 
 eggs = unidecode
 	pyPdf
@@ -45,17 +44,6 @@ options.xmlrpcs_port = ${settings:openerp_xmlrpcs_port}
 
 [env]
 recipe = gocept.recipe.env
-
-[static-analysis]
-recipe = zc.recipe.egg
-eggs = flake8
-
-[supervisor]
-recipe = collective.recipe.supervisor
-port = ${settings:supervisor_port}
-serverurl = ${settings:supervisor_url}:${supervisor:port}
-programs =
-    10 openerp ${buildout:directory}/bin/start_openerp
 
 
 [py]
