--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,7 +26,7 @@ openerp_xmlrpc_port = 8069
 openerp_xmlrpcs_port = 8071
 
 postgres_host = 127.0.0.1
-postgres_db_name = valnera
+postgres_db_name = cantabriasil
 postgres_user = openerp
 postgres_password = openerp
 postgres_port = 5432
