--- a/versions.cfg
+++ b/versions.cfg
@@ -1,6 +1,6 @@
 [versions]
 setuptools = 1.1.0
-
+#zsi =  2.1-a1
 Babel = 1.3
 collective.recipe.supervisor = 0.19
 collective.recipe.template = 1.11
@@ -92,7 +92,7 @@ Pillow = 1.7.1
 pywebdav = 0.9.4.1
 pyyaml = 3.10
 werkzeug = 0.9.4
-zsi = 2.0-rc3
+#zsi = 2.0-rc3
 feedparser = 5.1.1
 gdata = 2.0.16
 lxml = 2.3.3
