--- a/base-only-odoo.cfg
+++ b/base-only-odoo.cfg
@@ -22,7 +22,7 @@ addons = git https://github.com/Pexego/addons-va-ca-px.git openerp-repos/cantabr
 	git https://github.com/Pexego/addons-va-ca-ti.git openerp-repos/cantabriasil_TING master
 	git https://github.com/Pexego/l10n-spain-VA-CA.git openerp-repos/spain 6.1
 	git https://github.com/OCA/account-payment.git openerp-repos/payment-extension 6.1
-	git https://github.com/OCA/account-financial-tools.git openerp-repos/oca-financial-tools
+	git https://github.com/OCA/account-financial-tools.git openerp-repos/oca-financial-tools 6.1
 	bzr lp:~pexego/ocb-addons/ocb-addons-va-ca openerp-repos/ocb-addons last:1
 	bzr lp:~pexego/ocb-web/ocb-web-va-ca openerp-repos/ocb-web last:1 subdir=addons
 	bzr lp:sepa-tools/6.1 openerp-repos/sepa-tools last:1
